analysis part updated to the same level as the 90m paper
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10052 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/beam_optics.tex
+++ b/2013/1km paper/beam_optics.tex
@@ -25,7 +25,7 @@ effective length in the horizontal plane, $L_{x} = 46.8\,$m at $s = 220\,$m,
 enabling a better reconstruction of the horizontal component of the 
 scattering angle.
 
-\todo{add formulae for proton transport?}
+\todo{integrate the formulae for proton transport}
 \begin{equation}
 \label{eq:scatt angle}
 \theta_x^* = \theta^* \cos\phi^*\ ,\qquad \theta_y^* = \theta^* \sin\phi^*\ .
@@ -37,6 +37,5 @@ scattering angle.
 \end{equation}
 
 
-
-\todo{add data table with optical values?}
+\todo{add table with optical values?}
 
