--- a/2013/1km paper/elastic_1km_npb.tex
+++ b/2013/1km paper/elastic_1km_npb.tex
@@ -111,6 +111,7 @@ proton-proton interactions \sep elastic scattering \sep Coulomb-Nuclear Interfer
 %--------------------------------------------------
 \begin{thebibliography}{99}
 
+% TODO: sort the references
 
 \bibitem{plb43} U. Amaldi et al., Phys. Lett. B 43 (1973) 231-236.
 
@@ -238,6 +239,19 @@ proton-proton interactions \sep elastic scattering \sep Coulomb-Nuclear Interfer
 	\REVIEW{Comp.~Phys.~Comm.}{185}{2014}{1081--1084}
 	%number = "3",
 	%doi = "http://dx.doi.org/10.1016/j.cpc.2013.11.016",
+
+\bibitem{hubert-thesis}
+	\Name{H.~Niewiadomski}
+	%Reconstruction of Protons in the TOTEM Roman Pot Detectors at the LHC
+    PhD thesis, 
+	%University of Manchester, 2008
+    CERN-THESIS-2008-080,
+	\url{http://cds.cern.ch/record/1131825}
+
+\bibitem{op-elog} CERN LHC OP eLogbook:
+	\url{http://elogbook.cern.ch/eLogbook/eLogbook.jsp?shiftId=1049006},
+	\url{http://elogbook.cern.ch/eLogbook/eLogbook.jsp?shiftId=1049013}, 
+	\url{http://elogbook.cern.ch/eLogbook/eLogbook.jsp?shiftId=1049020}
 
 \end{thebibliography}
 
