--- a/2014/90m paper/elastic_90m_npb.tex
+++ b/2014/90m paper/elastic_90m_npb.tex
@@ -1,4 +1,4 @@
-\documentclass[3p,onecolumn,12pt,times]{elsarticle}
+\documentclass[3p,onecolumn,12pt,times,longtitle]{elsarticle}
 
 \usepackage{amsmath}
 \usepackage{amssymb}
