--- a/2014/90m paper/authorlist_cern.tex
+++ b/2014/90m paper/authorlist_cern.tex
@@ -2,32 +2,40 @@
 % Add an author
 % USAGE: \AddAuthor{name}{primary affiliation}{secondary affiliation}{external affiliation}
 
+\newif\ifFirstAuthor
+\FirstAuthortrue
+
 \def\AddAuthor#1#2#3#4{%
-	\def\Name{#1}%
 	\def\PriAf{#2}%
 	\def\SecAf{#3}%
 	\def\ExtAf{#4}%
 	\def\empty{}%
-	
+	%
+	\ifFirstAuthor
+		\FirstAuthorfalse
+	\else
+		,
+	\fi
+	%
 	\ifx\PriAf\empty
 		% no primary affiliation, only external
-		\author{#1\fnref{#4}}%
+		#1\Aref{#4}%
 	\else
 		\ifx\SecAf\empty
 			\ifx\ExtAf\empty
 				% only primary affiliation
-				\author[#2]{#1}%
+				#1\Iref{#2}%
 			\else
 				% primary and external affiliation
-				\author[#2]{#1\fnref{#4}}%
+				#1\IAref{#2}{#4}%
 			\fi
 		\else
 			\ifx\ExtAf\empty
 				% primary and secondary affiliation
-				\author[#2,#3]{#1}%
+				#1\IIref{#2}{#3}%
 			\else
 				% primary, secondary and external affiliation
-				\author[#2,#3]{#1\fnref{#4}}%
+				\relax
 			\fi
 		\fi
 	\fi
@@ -38,7 +46,8 @@
 % USAGE: \AddInstitute{reference as in AddAuthor}{address}
 
 \def\AddInstitute#1#2{%
-	\address[#1]{#2}%
+	\expandafter\write1{\string\newlabel{#1}{{#1}{}}}%
+	\hbox to\hsize{\strut\hss$^{#1}$#2\hss}%
 }
 
 %----------------------------------------------------------------------------------------------------
@@ -46,17 +55,17 @@
 % USAGE: \AddExternalInstitute{reference as in AddAuthor}{address}
 
 \def\AddExternalInstitute#1#2{%
-	\fntext[#1]{#2}%
+	\Anotfoot{#1}{#2}%
 }
 
 %----------------------------------------------------------------------------------------------------
 %----------------------------------------------------------------------------------------------------
 % include the actual data
 
-\author{The TOTEM Collaboration}
-\address{}
-
 \input authorlist_data
 
-\DeclareAuthors
+\begin{Authlist}
+	\DeclareAuthors
+\end{Authlist}
+
 \DeclareInstitutes
