last commit before removing the old formats
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10055 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/authorlist_data.tex
+++ b/2014/90m paper/authorlist_data.tex
@@ -95,7 +95,11 @@
 	\AddInstitute{8} {CERN, Geneva, Switzerland.}
 	\AddInstitute{9} {Case Western Reserve University, Dept. of Physics, Cleveland, OH, USA.}
 	\AddInstitute{10}{Penn State University, Dept.~of Physics, University Park, PA, USA.}
+}
+
+%----------------------------------------------------------------------------------------------------
 	
+\def\DeclareExternalInstitutes{%
 	\AddExternalInstitute{a}{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria.}
 	\AddExternalInstitute{b}{Ioffe Physical - Technical Institute of Russian Academy of Sciences.}
 	\AddExternalInstitute{c}{Warsaw University of Technology, Poland.}
